force-app/main/default/objects/Escalation__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% Escalation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>