force-app/main/default/objects/Escalation__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>