force-app/main/default/objects/Escalation__c/fields/Society__c.field-meta.xml
<CustomField>
    <fullName>Society__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Society</label>
    <referenceTo>Society__c</referenceTo>
    <relationshipLabel>Escalations</relationshipLabel>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>