force-app/main/default/objects/Escalation__c/fields/Updated_Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Updated_Rent_Amount__c</fullName>
    <label>Updated Rent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>